# new-rust-project

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  release  release.toml  semantic.yml  test-locally
.github/: dependabot.yml
.github/workflows/: audit-rust.yml  audit-secrets.yml  greetings.yml  master.yml  pr-wip.yml  push.yml  release-on-tag.yml  security.yml
src/: lib.rs  main.rs
