[package]
name = "new-rust-project"
description = "@ErichDonGubler's fancy template for new Rust projects"
version = "0.1.5-pre"
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"
# homepage = "https://github.com/erichdongubler/new-rust-project"
readme = "README.md"
repository = "https://github.com/erichdongubler/new-rust-project"
keywords = ["template", "new", "project"]
categories = ["development-tools"]
license = "MPL-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/erichdongubler/new-rust-project" }
is-it-maintained-open-issues = { repository = "https://github.com/erichdongubler/new-rust-project" }
maintenance = { status = "experimental" }
travis-ci = { repository = "erichdongubler/new-rust-project" }

[dev-dependencies]
version-sync = "0.8.1"
cargo-sync-readme = "0.2.0"
